--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,83 @@
+*{
+    font-family: roboto;
+    margin: 0;
+}
+
+
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+}
+
+
 .header{
     background-color: #1F2937;
     color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    
+    padding: 16px 0;
 }
 
-.footer{
-    background-color: #1F2937;
+
+h1{
+    font-size: 24px;
+    color: #F9FAF8;
 }
 
-body{
+
+a{
+    text-decoration: none;
+    color: #E5E7Eb;
+    font-size: 18px;
+}
+
+
+ul{
+    list-style-type: none;
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    gap: 16px;
+}
+
+
+.first{
+    background-color: #1F2937;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 75px 0;
+}
+
+.first h1{
+    font-size: 48px;
+    font-weight: extra-bold;
+    color: #F9FAF8;
+}
+
+.content{
+    width: 370px;
+
+}
+
+
+button{
+    background-color: #3882F6;
+    border-radius: 8px;
+    padding: 4px 16px;
+    color: white;
 }
 
 .quote{
     background-color: #e5e7eb;
 }
 
-.first{
+
+.footer{
     background-color: #1F2937;
-    color: white;
 }
 
-a{
-    text-decoration: none;
-    color: white;
-}
 
-ul{
-    list-style-type: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-}
