--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 *{
-    font-family: roboto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
 }
 
@@ -101,34 +101,47 @@ button{
     border-radius: 8px;
     padding: 4px 16px;
     color: white;
+    font-weight: bold;
+    border-color: white;
 }
 
 .quote{
     background-color: #e5e7eb;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
-    padding: 10px;
-}
-
-.quote .content{
+    padding: 100px 100px;
     font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+}
+
+.quote .author{
+    font-size: 24px;
+    text-align: right;
+    font-weight: bolder;
+    font-style: normal;
 }
 
 
 
+.signup{
+    align-self: center;
+}
 
-
-
-
-
+.signup .content{
+    background-color: #3882F6;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 50px;
+    border-radius: 7px;
+    padding: 30px;
+    color: white;
+    width: 700px;
+}
 
 .footer{
     background-color: #1F2937;
     color: white;
     text-align: center;
-    padding: 10px;
+    padding: 20px;
 }
-
-
