--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 16px 0;
+    padding: 16px 250px;
 }
 
 
@@ -49,19 +49,35 @@ ul{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    padding: 75px 0;
+    justify-content: space-evenly;
+    padding: 75px 400px;
 }
 
 .first h1{
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
+    width: 370px;
 }
 
-.content{
-    width: 370px;
+.first .placeholder{
+    background-color: gray;
+    width: 500px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+
+.first .content p{
+    font-weight: lighter;
+    width: 450px;
+    margin-bottom: 10px;
+}
+
+.first button{
+    border: none;
 }
 
 
@@ -77,6 +93,7 @@ ul{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    padding: 10px 500px;
 
 }
 
@@ -84,16 +101,15 @@ ul{
     border-radius: 10px;
     height: 140px;
     width: 140px;
-    border: 2px solid #3882F6;
+    border: 3px solid #3882F6;
 }
 
 .container p{
-    width: 140px;
+    width: 160px;
     margin-top: 10px;
     margin-bottom: 75px;
     text-align: center;
 }
-
 
 
 button{
@@ -107,24 +123,31 @@ button{
 
 .quote{
     background-color: #e5e7eb;
+    padding: 150px 550px;
     align-items: center;
-    padding: 100px 100px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.quote .content{
+    color: #1F2937;
     font-size: 36px;
-    font-weight: lighter;
+    font-weight: light;
     font-style: italic;
+    width: 820px;
 }
 
 .quote .author{
+    font-weight: bold;
     font-size: 24px;
-    text-align: right;
-    font-weight: bolder;
-    font-style: normal;
+    align-self: flex-end;
 }
-
 
 
 .signup{
     align-self: center;
+    padding: 75px 25px;
 }
 
 .signup .content{
@@ -132,12 +155,13 @@ button{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 50px;
+    margin: 50px 0px;
     border-radius: 7px;
-    padding: 30px;
+    padding: 50px 10px;
     color: white;
-    width: 700px;
+    width: 1000px;
 }
+
 
 .footer{
     background-color: #1F2937;
